@@ -195,13 +195,7 @@
         <dependency>
             <groupId>org.vaadin.addon</groupId>
             <artifactId>confirmdialog</artifactId>
-            <version>2.0.4</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.vaadin.addon</groupId>
-                    <artifactId>confirmdialog</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>2.0.5</version>
         </dependency>
 
         <dependency>
@@ -256,6 +250,12 @@
             <groupId>uk.com.robust-it</groupId>
             <artifactId>cloning</artifactId>
             <version>1.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.0</version>
         </dependency>
 
         <dependency>
