@@ -52,6 +52,10 @@
         - Add more tracked fields in version notification email.
         - Fixed NPE when browser cookie is disabled.
         - Fixed bug view render wrongly in some rare cases.
+        - Fixed overflow tooltip title if it is too long
+        - Minor bug fix of project activity stream
+        - Fixed confirm dialog body text size calculation wrongly
+        - Validate email fails in several email formats
     
     
     Changelog from MyCollab 4.3.0
